--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,7 @@
     "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
     "version": 1,
     "newProjectRoot": "packages",
-    "defaultProject": "formql",
+    "defaultProject": "app",
     "projects": {
         "app": {
             "root": "apps/angular/app/",
@@ -16,7 +16,7 @@
                     "options": {
                         "outputPath": "dist/apps/angular/app",
                         "index": "apps/angular/app/src/index.html",
-                        "main": "apps/angular/app/src//main.ts",
+                        "main": "apps/angular/app/src/main.ts",
                         "polyfills": "apps/angular/app/src/polyfills.ts",
                         "tsConfig": "apps/angular/app/tsconfig.app.json",
                         "assets": [
