--- a/packages/core/tsconfig.lib.prod.json
+++ b/packages/core/tsconfig.lib.prod.json
@@ -20,7 +20,7 @@
   },
   "angularCompilerOptions": {
     "enableIvy": false,
-    "annotateForClosureCompiler": true,
+    "annotateForClosureCompiler": false,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
