--- a/packages/editor/tsconfig.lib.prod.json
+++ b/packages/editor/tsconfig.lib.prod.json
@@ -25,7 +25,7 @@
   },
   "angularCompilerOptions": {
     "enableIvy": false,
-    "annotateForClosureCompiler": true,
+    "annotateForClosureCompiler": false,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
