--- a/examples/02-mortgage-calculator/package.json
+++ b/examples/02-mortgage-calculator/package.json
@@ -26,9 +26,9 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/material": "~8.1.4",
     "@angular/router": "~8.2.4",
-    "@formql/core": "0.4.2",
-    "@formql/editor": "0.4.2",
-    "@formql/material": "0.4.2",
+    "@formql/core": "file:../../dist/@formql/core/formql-core-0.4.2.tgz",
+    "@formql/editor": "file:../../dist/@formql/editor/formql-editor-0.4.2.tgz",
+    "@formql/material": "file:../../dist/@formql/material/formql-material-0.4.2.tgz",
     "angular2-text-mask": "9.0.0",
     "angular2-uuid": "1.1.1",
     "text-mask-addons": "3.8.0",
