--- a/packages/material/tsconfig.lib.prod.json
+++ b/packages/material/tsconfig.lib.prod.json
@@ -24,7 +24,7 @@
   },
   "angularCompilerOptions": {
     "enableIvy": false,
-    "annotateForClosureCompiler": true,
+    "annotateForClosureCompiler": false,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
