--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
-    "enableIvy": false
+    "enableIvy": true
   }
 }
 // "dist/formql"
