--- a/examples/01-starter-example/package.json
+++ b/examples/01-starter-example/package.json
@@ -23,8 +23,8 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "@formql/core": "file:../../dist/@formql/core/formql-core-0.4.2.tgz",
-    "@formql/editor": "file:../../dist/@formql/editor/formql-editor-0.4.2.tgz",
+    "@formql/core": "0.5.0",
+    "@formql/editor": "0.5.0",
     "angular2-text-mask": "9.0.0",
     "angular2-uuid": "1.1.1",
     "text-mask-addons": "3.8.0",
